--- a/Custom Models, Layers, and Loss Functions with/Creating a VGG network.ipynb
+++ b/Custom Models, Layers, and Loss Functions with/Creating a VGG network.ipynb
@@ -637,7 +637,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.3 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -651,7 +651,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "655ead04705df25979b098d70d07560a40ffb3d6c4aa160f4c4d023dee151a17"
+   }
   }
  },
  "nbformat": 4,
